--- a/index.html
+++ b/index.html
@@ -102,38 +102,62 @@
     .telegram-channel a:hover {
       box-shadow: 0 0 20px #00bfff !important;
     }
-    .instagram a {
-      background: #ff000033;
-      color: #ff4c4c;
-      border: 1px solid #ff4c4caa;
-      box-shadow: 0 0 10px #ff4c4c44;
+    .instagram-icon a {
+      color: red !important;
+      box-shadow: 0 0 10px red !important;
     }
-    .instagram a:hover {
-      background: #ff4c4c66;
-      box-shadow: 0 0 20px #ff4c4c;
+    .instagram-icon a:hover {
+      box-shadow: 0 0 20px red !important;
+    }
+
+    /* INTRO STYLE */
+    .intro-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    #intro-text {
+      font-size: 55px;
+      font-weight: bold;
+      color: gold;
+      font-family: 'Segoe UI', sans-serif;
+      text-shadow: 0 0 10px transparent;
+      transition: all 0.5s ease;
     }
   </style>
 </head>
 <body>
+
+  <!-- INTRO -->
+  <div id="intro" class="intro-container">
+    <h1 id="intro-text"></h1>
+  </div>
+
   <div class="glow-bg"></div>
   <div class="card">
     <img src="https://raw.githubusercontent.com/R0GER1/ROGER-/main/IMG_20250414_181919_520.jpg" alt="ROGER Image" />
     <h1>ROGER</h1>
-    <h2>اقوي مطور ملفات عبر التاريخ </h2>
+    <h2>اقوي مطور ملفات عبر التاريخ</h2>
     <div class="links">
       <div class="link-item telegram-channel">
         <a href="https://t.me/ROGER_4T" target="_blank" title="Telegram Channel">
           <i class="fas fa-bullhorn"></i>
         </a>
-        <p>قناة تليجرام</p>
+        <p>Telegram Channel</p>
       </div>
       <div class="link-item">
         <a href="https://t.me/VIP_heitam" target="_blank" title="Telegram Personal">
           <i class="fab fa-telegram-plane"></i>
         </a>
-        <p>تليجرام شخصي</p>
+        <p>Telegram Personal</p>
       </div>
-      <div class="link-item instagram">
+      <div class="link-item instagram-icon">
         <a href="https://www.instagram.com/he_itam11?igsh=aHcwaGJmNGd6aTMw" target="_blank" title="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
@@ -141,5 +165,57 @@
       </div>
     </div>
   </div>
+
+<script>
+  const introText = document.getElementById("intro-text");
+
+  // أول سطر: إنجليزي بحروف متتابعة
+  const english = "ROGER";
+  [...english].forEach((char, index) => {
+    const span = document.createElement("span");
+    span.textContent = char;
+    span.style.opacity = 0;
+    span.style.display = "inline-block";
+    span.style.transition = "opacity 0.3s ease, transform 0.3s ease";
+    span.style.transform = "scale(0.8)";
+    introText.appendChild(span);
+
+    setTimeout(() => {
+      span.style.opacity = 1;
+      span.style.transform = "scale(1.2)";
+      setTimeout(() => {
+        span.style.transform = "scale(1)";
+      }, 150);
+    }, 100 * index);
+  });
+
+  // سطر العربي يظهر بعد الإنجليزي
+  setTimeout(() => {
+    const arabicLine = document.createElement("div");
+    arabicLine.textContent = "أهلاً بك في عالم روجر ..";
+    arabicLine.style.direction = "rtl";
+    arabicLine.style.marginTop = "20px";
+    arabicLine.style.fontSize = "28px";
+    arabicLine.style.opacity = 0;
+    arabicLine.style.transition = "opacity 0.8s ease";
+    introText.appendChild(arabicLine);
+
+    setTimeout(() => {
+      arabicLine.style.opacity = 1;
+    }, 200);
+  }, 100 * english.length + 300);
+
+  // تأثير نهائي
+  setTimeout(() => {
+    introText.style.textShadow = "0 0 30px gold";
+    introText.style.transform = "scale(1.05)";
+  }, 100 * english.length + 1000);
+
+  // إخفاء الانترو
+  setTimeout(() => {
+    document.getElementById('intro').style.display = 'none';
+  }, 5000);
+</script>
+
 </body>
 </html>
